Updates for a clean console output.